# TestTitans

./: .gitignore  CMakeLists.txt  ContainerManager.h  FrontManager.h  README.md
api/: api-PickleRick.yaml  api-backend.yaml  api-worker.yaml
backend_manager/: CMakeLists.txt
backend_manager/include/: backend_manager.h
backend_manager/src/: backend_manager.cpp
backend_manager/tests/: CMakeLists.txt  main.cpp
backend_server/: CMakeLists.txt  main.cpp
backend_server/api/: ContestApi.cpp  ContestApi.h  HumanApi.cpp  HumanApi.h
backend_server/impl/: ContestApiImpl.cpp  ContestApiImpl.h  HumanApiImpl.cpp  HumanApiImpl.h
backend_server/model/: ContestCreation.cpp  ContestCreation.h  ContestIdObject.cpp  ContestIdObject.h  Helpers.cpp  Helpers.h  PackageCreation.cpp  PackageCreation.h  PackageId.cpp  PackageId.h  SessionIdObject.cpp  SessionIdObject.h  Solution.cpp  Solution.h  UserData.cpp  UserData.h
ssb_client/: CMakeLists.txt
ssb_client/include/: ApiClient.h  ApiConfiguration.h  ApiException.h  HttpContent.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h
ssb_client/include/api/: DatabaseApi.h  SchedulerApi.h  StorageApi.h
ssb_client/include/model/: Contest.h  ContestData.h  ContestFiles.h  ContestFilesId.h  ContestId.h  SessionId.h  Solution.h  SolutionData.h  SolutionFiles.h  SolutionFilesId.h  SolutionId.h  Task.h  TaskData.h  TaskFile.h  TaskFileId.h  TaskFileId_allOf.h  TaskId.h  User.h  UserData.h  UserId.h  UserSessionId.h
ssb_client/src/: ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp
ssb_client/src/api/: DatabaseApi.cpp  SchedulerApi.cpp  StorageApi.cpp
ssb_client/src/src/: Contest.cpp  ContestData.cpp  ContestFiles.cpp  ContestFilesId.cpp  ContestId.cpp  SessionId.cpp  Solution.cpp  SolutionData.cpp  SolutionFiles.cpp  SolutionFilesId.cpp  SolutionId.cpp  Task.cpp  TaskData.cpp  TaskFile.cpp  TaskFileId.cpp  TaskFileId_allOf.cpp  TaskId.cpp  User.cpp  UserData.cpp  UserId.cpp  UserSessionId.cpp
ssb_client/tests/: CMakeLists.txt
taskmanager/: CMakeLists.txt
taskmanager/include/: task_manager.h
taskmanager/tests/: CMakeLists.txt
worker_server/: CMakeLists.txt  main.cpp
worker_server/api/: WorkerApi.cpp  WorkerApi.h
(+12 files in other folders)
